--- a/.tas.yml
+++ b/.tas.yml
@@ -6,6 +6,9 @@ postMerge:
     - "./test/*.js"
   env: 
     NODE_ENV: test
+  strategy:
+    threshold: 1
+    name: after_n_commits
 preMerge:
   pattern:
     - "./test/*.js"
@@ -19,4 +22,3 @@ postRun:
      command:
         - yarn --version
 version: 1.0
-
