--- a/.tas.yml
+++ b/.tas.yml
@@ -6,6 +6,9 @@ postMerge:
     - "./test/*.js"
   env: 
     NODE_ENV: test
+  strategy:
+    threshold: 1
+    name: after_n_commits
 preMerge:
   pattern:
     - "./test/*.js"
